Fixed button alignment in the floating player

--- a/app/assets/stylesheets/ui/videos/controls/playback_controls.css
+++ b/app/assets/stylesheets/ui/videos/controls/playback_controls.css
@@ -71,5 +71,6 @@
 }
 
 .playback-controls li {
-  display: inline-block;
+  display: flex;
+  align-items: center;
 }
